second round of edits

--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,33 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>David M. Bedford</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   </head>
   <body>
+
+    <div class="header">
+
+      <header>
+        <span class="name">David Bedford</span>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </header>
+
+    </div>
+
+    <div class="contact">
+
+      <h1>
+        Contact
+      </h1>
+
+    </div>
+
+    <div class="footer">
+        copyright
+    </div>
 
   </body>
 </html>
