--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 
   <body>
 
-    <div class="header">
+    <div>
 
       <header>
-        David Bedford
+        <span class="name">David Bedford</span>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
       </header>
 
     </div>
@@ -29,20 +32,8 @@
 
     </div>
 
-    <div class="contact">
-
-      <h2>
-        Contact
-      </h2>
-
-    </div>
-
-    <div class="portfolio">
-
-      <h2>
-        Portfolio
-      </h2>
-
+    <div class="footer">
+      copyright
     </div>
 
   </body>
