third round of edits

--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
     <div class="header">
 
       <header>
-        <span class="name">David Bedford</span>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <span id="name">David Bedford</span>
+        <a href="index.html">About  </a>
+        <a href="portfolio.html">Portfolio  </a>
+        <a href="contact.html">Contact  </a>
       </header>
 
     </div>
