fourth round of edits

--- a/contact.html
+++ b/contact.html
@@ -11,24 +11,30 @@
 
       <header>
         <span id="name">David Bedford</span>
-        <a href="index.html">About  </a>
         <a href="portfolio.html">Portfolio  </a>
         <a href="contact.html">Contact  </a>
+        <a href="index.html">About  </a>
       </header>
 
     </div>
 
-    <div class="contact">
+    <div class="contact section">
 
       <h1>
         Contact
       </h1>
 
+      <hr>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, cumque voluptas dolores nemo sit accusamus id excepturi deleniti ipsum amet fuga velit, impedit quibusdam similique soluta odit repellat suscipit. Accusantium!
+      </p>
+
     </div>
 
-    <div class="footer">
+    <footer>
         copyright
-    </div>
+    </footer>
 
   </body>
 </html>
