--- a/portfolio.html
+++ b/portfolio.html
@@ -11,24 +11,30 @@
 
         <header>
           <span id="name">David Bedford</span>
-          <a href="index.html">About  </a>
           <a href="portfolio.html">Portfolio  </a>
           <a href="contact.html">Contact  </a>
+          <a href="index.html">About  </a>
         </header>
 
       </div>
 
-      <div class="portfolio">
+      <div class="portfolio section">
 
         <h1>
           Portfolio
         </h1>
 
+        <hr>
+
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis fuga ab at laudantium sequi temporibus et omnis assumenda, earum obcaecati ipsum porro doloribus quisquam facere nihil voluptas, sint voluptates mollitia?
+        </p>
+
       </div>
 
-      <div class="footer">
+      <footer>
           copyright
-      </div>
+      </footer>
 
     </body>
 </html>
