--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   </head>
 
-  <body>
+  <body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlu6aEjLTCB1kAdxytf2oONN_6pRzRGEf87DYzKrUmTO_rKbOI">
 
     <div>
 
       <header>
         <span id="name">David Bedford</span>
-        <a href="index.html">About  </a>
         <a href="portfolio.html">Portfolio  </a>
         <a href="contact.html">Contact  </a>
+        <a href="index.html">About  </a>
       </header>
 
     </div>
 
-    <div class="aboutme">
+    <div class="aboutme section">
 
       <h1>
         About Me
       </h1>
+
+      <hr>
 
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit, doloribus neque vero et iure maiores ea vitae quibusdam consequuntur distinctio? Et nam inventore quidem.
@@ -32,9 +34,9 @@
 
     </div>
 
-    <div class="footer">
+    <footer>
       copyright
-    </div>
+    </footer>
 
   </body>
 
