Feb 24th: first push

--- a/index.html
+++ b/index.html
@@ -7,36 +7,29 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   </head>
 
-  <body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlu6aEjLTCB1kAdxytf2oONN_6pRzRGEf87DYzKrUmTO_rKbOI">
+  <body>
 
-    <div>
-
-      <header>
-        <span id="name">David Bedford</span>
-        <a href="portfolio.html">Portfolio  </a>
-        <a href="contact.html">Contact  </a>
-        <a href="index.html">About  </a>
-      </header>
-
-    </div>
+    <header>
+      <span id="name">David Bedford</span>
+      <a href="portfolio.html">Portfolio  </a>
+      <a href="contact.html">Contact  </a>
+      <a href="index.html">About  </a>
+    </header>
 
     <div class="aboutme section">
 
-      <h1>
-        About Me
-      </h1>
+      <h1>About Me</h1>
 
       <hr>
 
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit, doloribus neque vero et iure maiores ea vitae quibusdam consequuntur distinctio? Et nam inventore quidem.
-      </p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa.
+        Deleniti, incidunt obcaecati consectetur fugit,
+        doloribus neque vero et iure maiores ea vitae quibusdam consequuntur
+        distinctio? Et nam inventore quidem</p>
 
     </div>
 
-    <footer>
-      copyright
-    </footer>
+    <footer>copyright</footer>
 
   </body>
 
