--- a/portfolio.html
+++ b/portfolio.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="UTF-8">
     <title>David M. Bedford</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   </head>
+
   <body>
 
-      <div class="header">
+    <header>
+      <span id="name">David Bedford</span>
+      <a href="portfolio.html">Portfolio  </a>
+      <a href="contact.html">Contact  </a>
+      <a href="index.html">About  </a>
+    </header>
 
-        <header>
-          <span id="name">David Bedford</span>
-          <a href="portfolio.html">Portfolio  </a>
-          <a href="contact.html">Contact  </a>
-          <a href="index.html">About  </a>
-        </header>
+    <div class="portfolio section">
 
-      </div>
+      <h1>Portfolio</h1>
 
-      <div class="portfolio section">
+      <hr>
 
-        <h1>
-          Portfolio
-        </h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis fuga ab at
+          laudantium sequi temporibus et omnis assumenda, earum obcaecati ipsum porro
+          doloribus quisquam facere nihil voluptas, sint voluptates mollitia?</p>
 
-        <hr>
+    </div>
 
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis fuga ab at laudantium sequi temporibus et omnis assumenda, earum obcaecati ipsum porro doloribus quisquam facere nihil voluptas, sint voluptates mollitia?
-        </p>
+    <footer>copyright</footer>
 
-      </div>
+  </body>
 
-      <footer>
-          copyright
-      </footer>
-
-    </body>
 </html>
