--- a/contact.html
+++ b/contact.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="UTF-8">
     <title>David M. Bedford</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   </head>
+
   <body>
 
-    <div class="header">
-
-      <header>
-        <span id="name">David Bedford</span>
-        <a href="portfolio.html">Portfolio  </a>
-        <a href="contact.html">Contact  </a>
-        <a href="index.html">About  </a>
-      </header>
-
-    </div>
+    <header>
+      <span id="name">David Bedford</span>
+      <a href="portfolio.html">Portfolio  </a>
+      <a href="contact.html">Contact  </a>
+      <a href="index.html">About  </a>
+    </header>
 
     <div class="contact section">
 
-      <h1>
-        Contact
-      </h1>
+      <h1>Contact</h1>
 
       <hr>
 
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, cumque voluptas dolores nemo sit accusamus id excepturi deleniti ipsum amet fuga velit, impedit quibusdam similique soluta odit repellat suscipit. Accusantium!
-      </p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate,
+        cumque voluptas dolores nemo sit accusamus id excepturi deleniti ipsum amet fuga velit,
+        impedit quibusdam similique soluta odit repellat suscipit. Accusantium!</p>
 
     </div>
 
-    <footer>
-        copyright
-    </footer>
+    <footer>copyright</footer>
 
   </body>
+
 </html>
