--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
   <body>
 
-    <header>
+    <header id="myheader">
       <span id="name">David Bedford</span>
+      <!--//make a div for links to portfolio, contact, and about, so that you can alter the fonts against
+                the id.name. Alternatively, you could change your name into a h1 and the h1 into h2// -->
+
       <a href="portfolio.html">Portfolio  </a>
       <a href="contact.html">Contact  </a>
       <a href="index.html">About  </a>
@@ -22,10 +25,22 @@
 
       <hr>
 
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa.
-        Deleniti, incidunt obcaecati consectetur fugit,
-        doloribus neque vero et iure maiores ea vitae quibusdam consequuntur
-        distinctio? Et nam inventore quidem</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+        doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+        ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+        doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+        ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+        doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+        ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+        doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+        ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+        doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+        ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+        doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+        ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+        doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+        ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+        doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quidem</p>
 
     </div>
 
