--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,22 @@
 
       <hr>
 
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis fuga ab at
-          laudantium sequi temporibus et omnis assumenda, earum obcaecati ipsum porro
-          doloribus quisquam facere nihil voluptas, sint voluptates mollitia?</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quide?</p>
 
     </div>
 
