Feb 26th: first pushes

--- a/contact.html
+++ b/contact.html
@@ -16,32 +16,25 @@
       <a href="index.html">About  </a>
     </header>
 
-    <div class="contact section">
+    <div class="section">
 
-      <h1>Contact</h1>
+      <div class="contact">
 
-      <hr>
+        <h1>Contact</h1>
 
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quide!</p>
+        <hr>
+
+        <p> <span id="em">Email:</span> david.m.bedford1@gmail.com</p>
+        <br>
+        <p> <span id="ph">Phone:</span> 848.391.9915</p>
+        <br>
+        <p> <span id="we">Website:</span> <link href="gnawdpaw.bandcamp.com">gnawdpaw.bandcamp.com</link></p>
+
+      </div>
 
     </div>
 
-    <footer>copyright</footer>
+    <footer>Copyright</footer>
 
   </body>
 
