--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
       <a href="index.html">About  </a>
     </header>
 
-    <div class="aboutme section">
+    <div class="section">
 
-      <h1>About Me</h1>
+      <div class="aboutme">
 
-      <hr>
+        <h1>About Me</h1>
 
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+        <hr>
+
+        <p><img class="cow" src="assets/images/redcowsmall.jpg"></img> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
         doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
         ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
         doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
@@ -42,9 +44,11 @@
         ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
         doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quidem</p>
 
+      </div>
+
     </div>
 
-    <footer>copyright</footer>
+    <footer>Copyright(c)</footer>
 
   </body>
 
