--- a/portfolio.html
+++ b/portfolio.html
@@ -16,32 +16,25 @@
       <a href="index.html">About  </a>
     </header>
 
-    <div class="portfolio section">
+    <div class="section">
 
-      <h1>Portfolio</h1>
+      <div class="portfolio">
 
-      <hr>
+        <h1>Portfolio</h1>
 
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-          ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-          doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quide?</p>
+        <hr>
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
+            doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem</p>
+        <img class="cow" src="assets/images/reddog.jpg">Bernese Mountain Good Boy</img>
+        <img class="cow" src="assets/images/redhorse.jpg">Scarlet Land Whale</img>
+        <img class="cow" src="assets/images/redpanda.jpg">Crimson</img>
+
+      </div>
 
     </div>
 
-    <footer>copyright</footer>
+    <footer>Copyright</footer>
 
   </body>
 
