Feb 26th: second push

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,11 @@
         <hr>
 
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-            doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem</p>
-        <img class="cow" src="assets/images/reddog.jpg">Bernese Mountain Good Boy</img>
-        <img class="cow" src="assets/images/redhorse.jpg">Scarlet Land Whale</img>
-        <img class="cow" src="assets/images/redpanda.jpg">Crimson</img>
+            doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
+            <img class="cow" src="assets/images/reddog.jpg">Bernese Mountain Good Boy</img>
+            <img class="cow" src="assets/images/redhorse.jpg">Scarlet Land Whale</img>
+            <img class="cow" src="assets/images/redpanda.jpg">Crimson</img>
+        </p>
 
       </div>
 
