feb 26: final push of the day

--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,11 @@
   <body>
 
     <header>
-      <span id="name">David Bedford</span>
-      <a href="portfolio.html">Portfolio  </a>
-      <a href="contact.html">Contact  </a>
-      <a href="index.html">About  </a>
+      <span id="name">David Bedford</span
+      <a class="headerlinks href="portfolio.html">Portfolio  </a>
+      <a class="headerlinks href="contact.html">Contact  </a>
+      <a class="headerlinks href="index.html">About  </a>
+
     </header>
 
     <div class="section">
@@ -28,7 +29,7 @@
         <br>
         <p> <span id="ph">Phone:</span> 848.391.9915</p>
         <br>
-        <p> <span id="we">Website:</span> <link href="gnawdpaw.bandcamp.com">gnawdpaw.bandcamp.com</link></p>
+        <p> <span id="we">Website:</span> <a href="https://gnawdpaw.bandcamp.com">gnawdpaw.bandcamp.com</a></p>
 
       </div>
 
