--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 
   <body>
 
-    <header id="myheader">
-      <span id="name">David Bedford</span>
-      <!--//make a div for links to portfolio, contact, and about, so that you can alter the fonts against
-                the id.name. Alternatively, you could change your name into a h1 and the h1 into h2// -->
+    <header>
+      <span id="name">David Bedford</spa
+      <a class="headerlinks" href="portfolio.html">Portfolio  </a>
+      <a class="headerlinks" href="contact.html">Contact  </a>
+      <a class="headerlinks" href="index.html">About  </a>
 
-      <a href="portfolio.html">Portfolio  </a>
-      <a href="contact.html">Contact  </a>
-      <a href="index.html">About  </a>
     </header>
 
     <div class="section">
