--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,10 @@
 
     <header>
       <span id="name">David Bedford</span>
-      <a href="portfolio.html">Portfolio  </a>
-      <a href="contact.html">Contact  </a>
-      <a href="index.html">About  </a>
+      <a class="headerlinks" href="portfolio.html">Portfolio  </a>
+      <a class="headerlinks" href="contact.html">Contact  </a>
+      <a class="headerlinks" href="index.html">About  </a>
+
     </header>
 
     <div class="section">
@@ -24,12 +25,11 @@
 
         <hr>
 
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, ipsa. Deleniti, incidunt obcaecati consectetur fugit,
-            doloribus neque vero et iure maiores ea vitae quibusdam consequunturdistinctio? Et nam inventore quideLorem
-            <img class="cow" src="assets/images/reddog.jpg">Bernese Mountain Good Boy</img>
-            <img class="cow" src="assets/images/redhorse.jpg">Scarlet Land Whale</img>
-            <img class="cow" src="assets/images/redpanda.jpg">Crimson</img>
-        </p>
+        <div class="portfoliopics">
+            <img class="cow" src="assets/images/reddog.jpg"></img>
+            <img class="cow" src="assets/images/redhorse.jpg"></img>
+            <img class="cow" src="assets/images/redpanda.jpg"></img>
+        </div>
 
       </div>
 
