feb 26th: final final

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <body>
 
     <header>
-      <span id="name">David Bedford</span
+      <span id="name">David Bedford</span>
       <a class="headerlinks href="portfolio.html">Portfolio  </a>
       <a class="headerlinks href="contact.html">Contact  </a>
       <a class="headerlinks href="index.html">About  </a>
