--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
 
     <header>
       <span id="name">David Bedford</span>
-      <a class="headerlinks href="portfolio.html">Portfolio  </a>
-      <a class="headerlinks href="contact.html">Contact  </a>
-      <a class="headerlinks href="index.html">About  </a>
+      <a class="headerlinks" href="portfolio.html">Portfolio  </a>
+      <a class="headerlinks" href="contact.html">Contact  </a>
+      <a class="headerlinks" href="index.html">About  </a>
 
     </header>
 
