--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>David M. Bedford</title>
+    <title>Austin Smith</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   </head>
 
   <body>
 
     <header>
-      <span id="name">David Bedford</span>
+      <span id="name">Austin Smith</span>
       <a class="headerlinks" href="portfolio.html">Portfolio  </a>
       <a class="headerlinks" href="contact.html">Contact  </a>
       <a class="headerlinks" href="index.html">About  </a>
